tools/tests/ui/fail/l1056.cnf
// Test file for error code: L1056
// Expected error: Overflow Illegal character in division structure -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
